--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,22 @@
 --- #YAML:1.0
-name:                Set-Tiny
-version:             0.01
-abstract:            Simple sets of strings
-license:             perl
-author:              
-    - Stanis Trendelenburg <stanis.trendelenburg@gmail.com>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Test::More:                    0
+name:               Set-Tiny
+version:            0.02
+abstract:           Simple sets of strings
+author:
+    - Stanis Trendelenburg <trendels@cpan.org>
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Test::More:  0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.57_05
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
